Fixed Bugs and Added Rooms to Profile🏁
1. Design, Implement and Link Profile
2. 10
3. Added the rooms and functionality to the segments. Also fixed a bug in the tabs page.

--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -56,7 +56,7 @@
     </div>
   </ion-menu>
 
-  <div style="position: fixed;" class="ion-page" id="main-content">
+  <div style="position: fixed;height: 10% !important;" id="main-content">
 
     <ion-menu-toggle>
       <ion-fab-button translucent="false" class="burger-btn">
