--- a/Client/Website/src/app/components/room/room-details/room-details.component.html
+++ b/Client/Website/src/app/components/room/room-details/room-details.component.html
@@ -2,7 +2,7 @@
     <tr>
         <td colspan="2">
 
-            <div class="room-label">{{room?.value?.label}}</div>
+            <div class="room-label">{{room.value.label}}</div>
         </td>
     </tr>
     <tr>
