--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -40,25 +40,23 @@
             </ion-segment-button>
         </div>
     </ion-segment>
+    <ng-container *ngIf="selected==='rooms'">
 
-    <table style="width:100%;table-layout: fixed;">
+        <table style="width:100%;table-layout: fixed;">
+    
+            <tr *ngFor="let booking of booking_array; let i = index">
+    
+                <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
+    
+    
+                    <div class="square">
+                    <img *ngIf="booking_array[x + i * 3]" [src]="rooms.get(booking_array[x + i * 3].room_id || '0')?.images?.at(0)" onerror="this.src='assets/placeholder.png'" class="booking-imgs">
+                    </div>
+                </td>
+            </tr>
+    
+        </table>
 
-        <tr *ngFor="let booking of booking_array; let i = index">
-
-
-
-
-
-            <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
-
-
-                <div class="square">
-                <img *ngIf="booking_array[x + i * 3]" [src]="rooms.get(booking_array[x + i * 3].room_id || '0')?.images?.at(0)" onerror="this.src='assets/placeholder.png'" class="booking-imgs">
-                </div>
-            </td>
-        </tr>
-
-    </table>
-
+    </ng-container>    
 
 </div>
