--- a/Client/Application/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.scss
@@ -65,9 +65,10 @@
     border-radius: 50px;
     overflow-x: auto;
 }
+
 .booking-imgs {
-    width: 100%;
-    height: 100%;
+    width: 33vw;
+    height: 33vw;
     object-fit: cover;
 
 }
@@ -101,19 +102,4 @@ ion-segment-button {
     padding: 2px;
     text-align: center;
     
-}
-
-.square {
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%; /* 1:1 Aspect Ratio */
-    overflow: hidden;
-}
-
-.square img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
 }
