--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -58,5 +58,24 @@
         </table>
 
     </ng-container>    
+ 
+    <ng-container *ngIf="selected==='services'">
+
+        <table style="width:100%;table-layout: fixed;">
+    
+            <tr *ngFor="let activity of registration_array; let i = index">
+    
+                <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
+    
+                    <div class="square">
+                    <img *ngIf="registration_array[x + i * 3]" [src]="activities.get(registration_array[x + i * 3].activity_id || '0')?.image?.at(0)" onerror="this.src='assets/placeholder.png'" class="booking-imgs">
+                    </div>
+                </td>
+            </tr>
+    
+        </table>
+
+    </ng-container>   
+
 
 </div>
