--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -54,7 +54,13 @@
                         <div class="square">
                             <img *ngIf="booking_array[x + i * 3]"
                                 [src]="rooms.get(booking_array[x + i * 3].room_id || '0')?.images?.at(0)"
-                                onerror="this.src='assets/placeholder.png'" class="booking-imgs">
+                                onerror="this.src='assets/placeholder.png'" class="booking-imgs" (click)="openModal({
+                                    title: rooms?.get(booking_array[x + i * 3].room_id)?.label,
+                                    body: rooms?.get(booking_array[x + i * 3].room_id)?.description,
+                                    price: room_types?.get(rooms?.get(booking_array[x + i * 3].room_id)?.type || '0')?.price,
+                                    start_date: booking_array[x + i * 3]?.check_in,
+                                    end_date: booking_array[x + i * 3]?.end_date
+                                })">
                         </div>
                     </td>
                 </tr>
