Completed the available routing🏁
1. N/A
2. 10
3. Completed and routed the available pages to the menu page

--- a/Client/Application/src/app/chat/admin/chat/chat.component.html
+++ b/Client/Application/src/app/chat/admin/chat/chat.component.html
@@ -11,7 +11,7 @@
                         <!-- Title -->
                         <div style="position: absolute; top: 0px; width: 100%; margin: 16px;">
                             <ion-fab>
-                                <ion-fab-button class="back-btn" routerLink="/admin/support">
+                                <ion-fab-button class="back-btn" routerLink="/chat/admin">
                                     <ion-icon name="arrow-back-outline"></ion-icon>
                                 </ion-fab-button>
                               </ion-fab>
