Created the Animation for the Modal🏁
1. Design, Implement and Link Profile
2. 10
3. Finished the animations for the modals.

--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -43,6 +43,12 @@
     </ion-segment>
     <ion-content>
 
+        <ion-modal [enterAnimation]="enterAnimation" [leaveAnimation]="leaveAnimation" class="modal" [isOpen]="isModalOpen">
+            <ng-template>
+              <app-profile-modal></app-profile-modal>
+            </ng-template>
+          </ion-modal>
+
         <ng-container *ngIf="selected==='rooms'">
 
             <table style="width:100%;table-layout: fixed;">
