--- a/Client/Application/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.scss
@@ -13,6 +13,15 @@
     height: 75%
 }
 
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
+
 .name {
 
 
@@ -98,8 +107,8 @@ ion-segment-button {
     transition: all 250ms ease-in-out;
 }
 
-.order{
+.order {
     padding: 2px;
     text-align: center;
-    
+
 }
