Started Designing the Modal🏁
1. Design, Implement and Link Profile
2. 10
3. Added the title, divider and fixed the borders.

--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -45,7 +45,7 @@
 
         <ion-modal [enterAnimation]="enterAnimation" [leaveAnimation]="leaveAnimation" class="modal" [isOpen]="isModalOpen">
             <ng-template>
-              <app-profile-modal></app-profile-modal>
+              <app-profile-modal style="height: 100%;"></app-profile-modal>
             </ng-template>
           </ion-modal>
 
