--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  profile-modal works!
+  <ion-text class="title">Movie Night</ion-text>
+  <hr style="border-bottom: 1px solid #D6B389; width: 95%;">
 </div>
