Added Back Button with Functionality🏁
1. Design, Implement and Link Profile
2. 10
3. Added the back button with functionality.

--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
@@ -1,3 +1,6 @@
+<ion-fab-button (click)="closeModal()" class="back-btn">
+  <ion-icon name="arrow-back-outline"></ion-icon>
+</ion-fab-button>
 <div class="container">
   <ion-text class="title">Movie Night</ion-text>
   <hr style="border-bottom: 1px solid #D6B389; width: 95%;">
