--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -29,3 +29,14 @@
 
     color: #000000;
 }
+
+.back-btn {
+
+    margin: 16px;
+    --background: transparent;
+    --color: black;
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+
+}
