--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -4,16 +4,32 @@
 
     width: 90%;
     height: 70%;
-    padding: 16px;
+    padding: 24px;
     border-radius: 40px;
     background-color: white;
-    position: relative;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 
-    text-align: center;
+    // text-align: center;
 
+
+}
+
+.label {
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    margin-top: 16px;
+
+    text-transform: capitalize;
+
+    color: #000000;
 
 }
 
@@ -38,5 +54,17 @@
     --box-shadow: none;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
+
+}
+
+.body {
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+
+    color: #000000;
 
 }
