Finished the Activities Modal🏁
1. Design, Implement and Link Profile
2. 10
3. Finished the design and logic of the activities modal.

--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
@@ -14,4 +14,11 @@
   <br>
   <ion-text class="body">{{data?.body}}</ion-text>
   <br>
+  <div>
+
+    <ion-button *ngIf="data?.button" (click)="data!.button.action()">
+      {{data!.button.label}}
+    </ion-button>
+
+  </div>
 </div>
