Styled the Button🏁
1. Design, Implement and Link Profile
2. 10
3. Finished the design of the modal's button.

--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -68,3 +68,15 @@
     color: #000000;
 
 }
+
+.cancel-btn {
+
+    --background: #D6B389;
+    width: 150px;
+    text-align: center;
+    bottom: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+
+}
