--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
@@ -14,9 +14,9 @@
   <br>
   <ion-text class="body">{{data?.body}}</ion-text>
   <br>
-  <div>
+  <div style="text-align: center; height: 50%">
 
-    <ion-button *ngIf="data?.button" (click)="data!.button.action()">
+    <ion-button *ngIf="data?.button" (click)="data!.button.action()" class="cancel-btn">
       {{data!.button.label}}
     </ion-button>
 
