--- a/Client/Application/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.html
@@ -42,7 +42,7 @@
   <tr>
     <td style="padding-right: 100px;">
       <div class="button">
-        <ion-button (click)="openModal()" expand="block" fill="outline" color="#14274A">Explore</ion-button>
+        <ion-button (click)="open_modal.emit()" expand="block" fill="outline" color="#14274A">Explore</ion-button>
       </div>
     </td>
 
