Created the Activities Modal🏁
1. Design, Implement and Link Profile
2. 10
3. Linked the modal to the html of activities.

--- a/Client/Application/src/app/components/activities/activities.component.html
+++ b/Client/Application/src/app/components/activities/activities.component.html
@@ -23,10 +23,17 @@
         </td>
       </tr>
 
+      <ion-modal *ngIf="active_data" [enterAnimation]="enterAnimation" [leaveAnimation]="leaveAnimation" class="modal"
+      [isOpen]="isModalOpen">
+      <ng-template>
+          <app-profile-modal (closeModal)="closeModal()" [data]="active_data"
+              style="height: 100%;"></app-profile-modal>
+      </ng-template>
+     </ion-modal>
 
     </table>
     <div class="button-container">
 
-      <button class="learn-more-button" (click)="openModal()">Learn More</button>
+      <button class="learn-more-button" (click)="openModal(formatActivity())">Learn More</button>
     </div>
   </div>
