--- a/Client/Application/src/app/components/activities/activities.component.scss
+++ b/Client/Application/src/app/components/activities/activities.component.scss
@@ -24,4 +24,12 @@
     justify-content: center;
     align-items: center;
 }
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
  
