--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.html
@@ -15,7 +15,7 @@
   <ion-text class="body">{{data?.body}}</ion-text>
   <br>
   <div style="text-align: center; height: 50%">
-    <ion-input [(ngModel)]="data!.stored_data">{{'seats' | translate}}</ion-input>
+    <ion-input *ngIf="data!.show_num_input" [(ngModel)]="data!.stored_data">{{'seats' | translate}}</ion-input>
     <ion-button *ngIf="data?.button" (click)="performAction()" class="cancel-btn">
       {{data!.button!.label}}
     </ion-button>
