--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -80,3 +80,16 @@
     position: absolute;
 
 }
+
+.input {
+
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-size: 12px;
+    line-height: 3vh;
+    color: #14274A;
+    margin: 0px;
+    font-weight: 700;
+
+}
