Fixed the booking logic🏁
1. Design, Implement and Link Rooms Page
2. 10
3. Fixed the booking process on the App

--- a/Client/Application/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="image-bg">
-  <img src="../../../assets/rooms/room-sample.jpg">
+  <img [src]="room?.value?.images?.at(0)" onerror="this.src='assets/placeholder.png'">
 </div>
 
 <!-- <div class="body">
