--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
@@ -20,7 +20,7 @@
   
   
     <ng-template>
-      <app-room-modal [room]="active_data" (closeModal)="closeModal()"></app-room-modal>
+      <app-room-modal [room]="active_data" (closeModal)="closeModal($event)"></app-room-modal>
     </ng-template>
   </ion-modal>
   
