--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -91,5 +91,21 @@
     color: #14274A;
     margin: 0px;
     font-weight: 700;
+    text-transform: capitalize;
 
+}
+.quantity_btn {
+
+    display: inline-block;
+    width: 10px;
+    background-color: white;
+    border: 0px;
+    margin: 16px;
+    --background: #D6B389;
+    height: 20px;
+
+}
+
+.seats{
+    color:#14274A;
 }
