--- a/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.scss
@@ -3,7 +3,7 @@
 
 
     width: 90%;
-    height: 70%;
+    height: 80%;
     padding: 24px;
     border-radius: 40px;
     background-color: white;
@@ -15,6 +15,32 @@
     // text-align: center;
 
 
+}
+
+
+.options {
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    background-color: transparent;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+
+    // margin: 0px 12px;
+    width: 50%
+}
+
+.date {
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    
+    width: 50%
 }
 
 .modal {
