--- a/Client/Application/src/global.scss
+++ b/Client/Application/src/global.scss
@@ -28,3 +28,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Kulim+Park:wght@200;400;500&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 @import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500&family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;700&display=swap');
